--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,14 @@
 {
   "name": "client",
-  "version": "*",
+  "version": "0.21.1",
   "private": true,
   "dependencies": {
-    "react": "*",
-    "react-dom": "*",
-    "react-scripts": "*",
-    "react-router-dom": "*",
-    "axios": "*"
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-scripts": "4.0.1",
+    "react-router-dom": "5.2.0",
+    "axios": "0.21.1",
+    "@testing-library/jest-dom": "5.11.8"
   },
   "scripts": {
     "start": "react-scripts start",
